[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ruminant"
authors = [
    {name = "Laura Kirsch"}
]
description = "Recursive metadata extraction tool"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "LGPL-3.0"
license-files = ["LICENCSE"]

[project.scripts]
ruminant = "ruminant.main:main"

[project.urls]
"Homepage" = "https://github.com/jakiki6/ruminant"
"Issues" = "https://github.com/jakiki6/ruminant/issues"
